changement post-processors

--- a/configs/preseed.cfg
+++ b/configs/preseed.cfg
@@ -71,7 +71,7 @@ d-i netcfg/choose_interface select auto
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
 d-i netcfg/get_hostname string gestsvcansible-debian-buster
-d-i netcfg/get_domain string example.com
+d-i netcfg/get_domain string tux.intra
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
@@ -130,8 +130,8 @@ d-i passwd/username string deploy
 # Create gestsvcansible user account.
 d-i passwd/user-fullname string gestsvcansible
 d-i passwd/username string gestsvcansible
-d-i passwd/user-password password gestsvcansible
-d-i passwd/user-password-again password gestsvcansible
+d-i passwd/user-password password jaimelegenepi
+d-i passwd/user-password-again password jaimelegenepi
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups gestsvcansible sudo
