--- a/configs/preseed.cfg
+++ b/configs/preseed.cfg
@@ -12,13 +12,13 @@ d-i debian-installer/locale string fr_FR.UTF-8
 #d-i localechooser/supported-locales multiselect en_US.UTF-8, nl_NL.UTF-8
 
 # Keyboard selection.
-d-i keyboard-configuration/xkb-keymap select fr(latin9)
-d-i keyboard-configuration/variant    select France
+d-i keyboard-configuration/xkb-keymap select fr
+d-i keyboard-configuration/variant    select France(oss_latin9)
 d-i console-setup/charmap	    select  UTF-8
 d-i console-setup/layout	     select  France
 # d-i keyboard-configuration/toggle select No toggling
-d-i console-keymaps-at/keymap select fr-latin9
-d-i debian-installer/keymap string fr-latin9
+d-i console-keymaps-at/keymap select oss_latin9
+d-i debian-installer/keymap string oss_latin9
 ### Network configuration
 # Disable network configuration entirely. This is useful for cdrom
 # installations on non-networked devices where the network questions,
